# claude_workout

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  RUN.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: config.py  contract.py  llm.py  main.py
app/hevy/: client.py  insights.py  normalize.py  service.py  summaries.py
app/retriever/: chunk.py  embed.py  extract.py  ingest.py  query.py  store.py
app/trainer/: service.py
docs/: BUILD_PROMPT.md
prompts/: trainer.md
scripts/: hevy_live_check.py  hevy_schema_probe.py
tests/: test_hevy.py  test_insights.py  test_llm.py  test_retriever.py  test_trainer.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css
web/src/components/: BottomSheet.tsx  ChatThread.tsx  ExercisePicker.tsx  MuscleBadge.tsx  ProgressChart.tsx  RoutineCard.tsx  SourceBadge.tsx  StatTile.tsx  StatusNote.tsx  TabBar.tsx  WorkoutCalendar.tsx  WorkoutCard.tsx
web/src/tabs/: Coach.tsx  History.tsx  Home.tsx  Progress.tsx  Routines.tsx
