[project]
name = "workout-app"
version = "0.1.0"
description = "Personal workout app: Nippard PDF retriever + Hevy integration + trainer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pdfplumber>=0.11",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "anthropic>=0.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
